test/spec_vectors/i32/fail/module_1.wat
(module (func $type-unary-operand-empty (i32.eqz) (drop)))